--- a/.env
+++ b/.env
@@ -42,3 +42,19 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&ch
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> symfony/mercure-bundle ###
+# See https://symfony.com/doc/current/mercure.html#configuration
+# The URL of the Mercure hub, used by the app to publish updates (can be a local URL)
+MERCURE_URL=https://example.com/.well-known/mercure
+# The public URL of the Mercure hub, used by the browser to connect
+MERCURE_PUBLIC_URL=https://example.com/.well-known/mercure
+# The secret used to sign the JWTs
+MERCURE_JWT_SECRET="!ChangeThisMercureHubJWTSecretKey!"
+###< symfony/mercure-bundle ###
+
+### WEBDAV CONFIG
+##### WEBDAV DIRECTORY TO EXPOSE
+WEBDAV_PUBLIC_DIR=/home/user/sideProjects/symfony/public
+##### WEBDAV INTERNAL TMP DIR
+WEBDAV_TMP_DIR=/home/user/sideProjects/symfony/data
